# systemzero

./: .gitignore  ezra.af
rewind/: .gitignore  AGENT_REMINDERS.md  ARCHITECTURE.md  CLAUDEPOINT_ACTUAL_BEHAVIOR.md  CONVERSATION_REWIND_DEEP_DIVE.md  DUAL_MODE_GUIDE.md  EXTERNAL_TOOLS_ANALYSIS.md  FINAL_IMPLEMENTATION_SPEC.md  IMPLEMENTATION_SPEC.md  QUICK_TEST_GUIDE.md  README.md  RESEARCH_FINDINGS.md  TESTING_GUIDE.md  UNFUCK_SUMMARY.md  UNIFIED_SETUP_GUIDE.md  checkpoint-hooks-strategy.md  gap-analysis.md  install.sh  pyproject.toml  setup-checkpoint-hooks.sh  smart-checkpoint.sh
rewind/.claudepoint/: changelog.json  conversation_metadata.json
rewind/.factory/schemas/: CLAUDECODE.md  FACTORYDROID.md
rewind/.factory/specs/: 2025-11-16-phase-1-4-smart-checkpoint-sh-integration-script.md  2025-11-16-phase-1-5-hook-installation-end-to-end-testing.md  2025-11-16-phase-1-6-end-to-end-testing-phase-2-prep-conversation-rewind.md  2025-11-16-unfuck-implementation-fix-hook-configuration-architecture.md  2025-11-17-fix-smart-checkpoint-sh-to-read-json-from-stdin.md  2025-11-17-hook-failure-analysis-remediation-plan.md  (+14 more)
rewind/claude-hooks-examples/: README.md  aggressive-hooks.json  balanced-hooks.json
rewind/configs/: README.md  aggressive-tier.json  balanced-tier.json  minimal-tier.json  rewind-checkpoint-ignore.json
rewind/docs/: ARCHITECTURE.md  CONTRIBUTING.md  USAGE.md
rewind/hooks/: README.md  aggressive-hooks.json  balanced-hooks.json  minimal-hooks.json
rewind/src/: __init__.py  __main__.py  cli.py
rewind/test/: integration-test.js  v3-suite.js
rewind/tests/: __init__.py  conftest.py  test_agents.py  test_checkpoint_store.py  test_config_presets.py  test_controller.py  test_hook_merger.py  test_hooks.py  test_rewind_back.py  test_session_start_policy.py  test_transcript_manager.py
rewind/tiers/: minimal.json
(+58 files in other folders)
